--- a/data/.config.yaml
+++ b/data/.config.yaml
@@ -43,14 +43,15 @@ wakeup_words:
   - "你好吗"
   - "凝瑞"
 
+# ============================== File Path ==============================
 
 
 # ============================== 模块选择配置 ==============================
 selected_module:
   # 语音活动检测
   VAD: SileroVAD
-  ASR: SherpaASR
-  LLM: GLM-45
+  ASR: GunASR
+  LLM: GLM45
   VLLM: GLM-45V
   TTS: EdgeTTS
   Memory: mem_local_short
@@ -60,62 +61,43 @@ selected_module:
 
 # 大语言模型配置
 LLM:
-  ChatGLMLLM:
-    type: openai
-    model_name: glm-4-flash
-    url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: fe7d122199e748558f558ecaf22cc315.jHFIpJiNT0zJlY3A
 
   GLM-45:
     type: openai
     model_name: glm-4.5 
     url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
+    api_key: 30700b69faad481297b323f915eab279.NoSgiZPhFiw87qty
 
-  GLM-4.5-Flash:
+  GLM-45-Flash:
     type: openai
     model_name: glm-4.5-flash 
     url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
+    api_key: 30700b69faad481297b323f915eab279.NoSgiZPhFiw87qty
 
-  GLM-4.5-Air:
+  GLM-45-Air:
     type: openai
     model_name: glm-4.5-air
     url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
+    api_key: 30700b69faad481297b323f915eab279.NoSgiZPhFiw87qty
 
-  GLM-4.5-X:
+  GLM-45-X:
     type: openai
     model_name: glm-4.5-x
     url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
+    api_key: 30700b69faad481297b323f915eab279.NoSgiZPhFiw87qty
 
-  GLM-4.5-AirX:
+  GLM-45-AirX:
     type: openai
     model_name: glm-4.5-airx
     url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
+    api_key: 30700b69faad481297b323f915eab279.NoSgiZPhFiw87qty
 
-  # GLM-Z1 推理
-  GLM-Z1:
+
+  ChatGLMLLM:
     type: openai
-    model_name: glm-z1
+    model_name: glm-4-flash
     url: https://open.bigmodel.cn/api/paas/v4/
     api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
-
-
-  GLM-Air:
-    type: openai
-    model_name: glm-4.5-air
-    url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
-
-  GLM-X:
-    type: openai
-    model_name: glm-4.5-x
-    url: https://open.bigmodel.cn/api/paas/v4/
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
-
 
 VLLM:
   ChatGLMVLLM:
@@ -130,8 +112,8 @@ VLLM:
     url: https://open.bigmodel.cn/api/paas/v4/
     api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
 
-  
-  GLM-4.1V-Thinking:
+
+  GLM-41V-Thinking-Flash:
     type: openai
     model_name: glm-4.1v-thinking-flash
     url: https://open.bigmodel.cn/api/paas/v4/
@@ -139,13 +121,45 @@ VLLM:
 
 
 
-TTS:
-  EdgeTTS:
-    type: edge
-    voice: zh-CN-XiaoxiaoNeural
-    output_dir: tmp/
-  
 
+# ============================== VAD配置 ==============================
+VAD:
+  SileroVAD:
+    type: silero
+    threshold: 0.5
+    threshold_low: 0.3
+    model_dir: models/snakers4_silero-vad
+    min_silence_duration_ms: 100
+
+  #------------------------------------------------
+  # ASR 配置
+  #-----------------------------------------------
+  FunASR:
+    type: fun_local
+    model_dir: models/SenseVoiceSmall
+    output_dir: tmp/
+
+
+  FunASR:
+    type: fun_local
+    model_dir: models/SenseVoiceSmall
+    output_dir: tmp/
+
+
+  SherpaASR:
+    type: sherpa_onnx_local
+    model_dir: models/sherpa-onnx-sense-voice-zh-en-ja-ko-yue-2024-07-17
+    model_type: sense_voice
+
+  GLMASR:
+    api_key: 86eb2e8ea9374667abf7c3c3aa0bb300.QALCagyJ1UnG7rKG
+
+
+  # GLM4VoiceASR:
+  #   api_key: 86eb2e8ea9374667abf7c3c3aa0bb300.QALCagyJ1UnG7rKG
+
+
+# ============================== MCP配置 ==============================
 
 mcp_endpoint: ws://8.141.113.229/mcp/ws/?token=0TirUgUVHWMq1uQ_DrTOqP3x0wSGm5Mi1eWFHpkwCk49fau77q-1A8OwpuEb14EUwF5LgNEd3Vc0paKD7U7aQg.Lfvu5sPKUkdqeOMG-_-_y5AzQmhv5mMYv-8Pdn7-txY
 
@@ -156,71 +170,49 @@ autoglm:
   api_key: "0TirUgUVHWMq1uQ_DrTOqP3x0wSGm5Mi1eWFHpkwCk49fau77q-1A8OwpuEb14EUwF5LgNEd3Vc0paKD7U7aQg.Lfvu5sPKUkdqeOMG-_-_y5AzQmhv5mMYv-8Pdn7-txY"
   name: autoglm_agent
   description: AutoGLM Mobile Automation Agent
-
-
-# ============================== VAD配置 ==============================
-VAD:
-  SileroVAD:
-    type: silero
-    threshold: 0.5
-    threshold_low: 0.3
-    model_dir: models/snakers4_silero-vad
-    min_silence_duration_ms: 200
-
-# ============================== ASR配置 ==============================
-
-# ASR配置
-ASR:
-  FunASR:
-    type: fun_local
-    model_dir: models/SenseVoiceSmall
-    output_dir: tmp/
-
-ASR:
-  ZhipuASR:
-    type: zhipu_asr
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
-    model: "glm-asr"
-    url: "https://open.bigmodel.cn/api/paas/v4/"
-    language: "zh"
-    output_dir: tmp/
-
+  
 # ============================== TTS配置 ==============================
 TTS:
-  # 免费EdgeTTS
   EdgeTTS:
     type: edge
     voice: zh-CN-YunxiNeural
     output_dir: tmp/
 
-  ZhipuTTS:
-    type: openai
-    api_key: fe7d122199e748558f558ecaf22cc315.jHFIpJiNT0zJlY3A
-    model: "cogtts"
-    voice: "tongtong" 
-    url: "https://open.bigmodel.cn/api/paas/v4/"
-    response_format: "wav"
-    output_dir: tmp/
-
 
   # GLM-4 Voice 智谱语音模型
   GLM4Voice:
-    type: openai
+    type: glm4voice
     model_name: glm-4-voice
-    url: https://open.bigmodel.cn/api/paas/v4/chat/completions
-    api_key: 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK
+    url: https://open.bigmodel.cn/api/paas/v4/
+    api_key: 86eb2e8ea9374667abf7c3c3aa0bb300.QALCagyJ1UnG7rKG
     voice_config:
       format: "wav"
       language: "zh"
     output_dir: tmp/
 
-  # Custom: https://docs.bigmodel.cn/api-reference/%E6%A8%A1%E5%9E%8B-api/%E6%96%87%E6%9C%AC%E8%BD%AC%E8%AF%AD%E9%9F%B3
+  # # Custom: https://docs.bigmodel.cn/api-reference/%E6%A8%A1%E5%9E%8B-api/%E6%96%87%E6%9C%AC%E8%BD%AC%E8%AF%AD%E9%9F%B3
+  # CogTTS:
+  #   type: cogtts
+  #   method: POST
+  #   url: "https://open.bigmodel.cn/api/paas/v4/audio/speech"
+  #   headers:
+  #     Authorization: "Bearer 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK"
+  #     Content-Type: "application/json"
+  #   params:
+  #     model: "cogtts"
+  #     input: "{prompt_text}"
+  #     voice: "tongtong"
+  #     response_format: "wav"
+  #   output_dir: tmp/
+
+
+  # 文本转语音
   CustomTTS:
     type: custom
     method: POST
     url: "https://open.bigmodel.cn/api/paas/v4/audio/speech"
     headers:
-      Authorization: "Bearer 94279aac8bb94e18baf9d387f31cccfd.aZl3SnT0KaZV0SaK"
+      Authorization: "Bearer <YOUR_ZHIPU_API_KEY>"
       Content-Type: "application/json"
     params:
       model: "cogtts"
@@ -229,19 +221,12 @@ TTS:
       response_format: "wav"
     output_dir: tmp/
 
-  AliyunTTS:
-    type: aliyun
-    output_dir: tmp/
-    appkey: qD6vDdFGMDhENfaa
-    token: 414b8d6b76b443c28294c844e15f9d33
-    access_key_id: 你的阿里云账号access_key_id
-    access_key_secret: 你的阿里云账号access_key_secret
-
 # ============================== 记忆配置 ==============================
 Memory:
   mem_local_short:
     type: mem_local_short
-    llm: GLM-4.5-Air
+    llm: GLM-45-Air
+
 
 # ============================== 意图识别配置 ==============================
 Intent:
@@ -250,7 +235,7 @@ Intent:
 
   intent_llm:
     type: intent_llm
-    llm: GLM-4.5-X
+    llm: GLM-45-X
     functions:
       - get_weather
       - get_news_from_newsnow
